--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>DCC202 - Atividade 5: WILIAN SANTOS</title>
 </head>
 <body>
-    
+    <main>
+         <h1>DCC202 - Atividade 5: WILIAN SANTOS</h1>
+        <p>Esta é a página principal do meu site sobre COISA. Temos também a página sobre personagens e o quanto gosto deles.</p>
+    </main>
 </body>
 </html>
