Adiciona termo e dado nos personagens

--- a/personagens.html
+++ b/personagens.html
@@ -8,19 +8,22 @@
 <body>
     <main>
         <h1>DCC202 - Atividade 5 - Personagens: WILIAN SANTOS</h1>
-        <p>Esta é a página sobre os personagens de COISA. Temos também a página sobre o <a href="preferencias.html">quanto gosto</a> de cada um deles e a <a href="index.html">página principal</a>.</p>
+        <p>Esta é a página sobre os personagens de COISA. Temos também a página sobre <a href="preferencias.html">o quanto gosto</a> de cada um deles e a <a href="index.html">página principal</a>.</p>
        
          <dl>
             <div>
                 <dt>HULK</dt>
+                <dd>Forte e verde</dd>
             </div>
 
             <div>
                 <dt>HOMEM ARANHA</dt>
+                <dd>Escalador</dd>
             </div>
 
             <div>
                 <dt>DEADPOOL</dt>
+                <dd>Maluco</dd>
             </div>
          </dl>
     </main>
