--- a/preferencias.html
+++ b/preferencias.html
@@ -6,6 +6,9 @@
     <title> DCC202 - Atividade 5 - Preferências: WILIAN SANTOS</title>
 </head>
 <body>
-    
+    <main>
+        <h1>DCC202 - Atividade 5 - Preferências: WILIAN SANTOS</h1>
+        <p>Esta é a página sobre minhas preferências entre os personagens. Temos também a página sobre personagens e a página principal.</p>
+    </main>
 </body>
 </html>
