--- a/preferencias.html
+++ b/preferencias.html
@@ -1,14 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> DCC202 - Atividade 5 - Preferências: WILIAN SANTOS</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>DCC202 - Atividade 5 - Preferências: WILIAN SANTOS</title>
+  </head>
+  <body>
     <main>
-        <h1>DCC202 - Atividade 5 - Preferências: WILIAN SANTOS</h1>
-        <p>Esta é a página sobre minhas preferências entre os personagens. Temos também a página sobre <a href="personagens.html">personagens</a> e a <a href="index.html">página principal</a>.</p>
+      <h1>DCC202 - Atividade 5 - Preferências: WILIAN SANTOS</h1>
+      <p>
+        Esta é a página sobre minhas preferências entre os personagens. Temos
+        também a página sobre <a href="personagens.html">personagens</a> e a
+        <a href="index.html">página principal</a>.
+      </p>
+
+      <table>
+        <tr>
+          <th>Personagem</th>
+          <th>História</th>
+          <th>Design</th>
+          <th>Personalidade</th>
+          <th>Total</th>
+        </tr>
+        <tr>
+          <td>HULK</td>
+          <td>10</td>
+          <td>10</td>
+          <td>10</td>
+          <td>40</td>
+        </tr>
+
+        <tr>
+          <td>HOMEM ARANHA</td>
+          <td>10</td>
+          <td>10</td>
+          <td>10</td>
+          <td>40</td>
+        </tr>
+      </table>
     </main>
-</body>
+  </body>
 </html>
