adciona tabela e corpo

--- a/preferencias.html
+++ b/preferencias.html
@@ -15,13 +15,16 @@
       </p>
 
       <table>
-        <tr>
-          <th>Personagem</th>
-          <th>História</th>
-          <th>Design</th>
-          <th>Personalidade</th>
-          <th>Total</th>
-        </tr>
+        <thead>
+          <tr>
+            <th>Personagem;</th>
+            <th>História;</th>
+            <th>Design;</th>
+            <th>Personalidade;</th>
+            <th>Total;</th>
+          </tr>
+        </thead>
+        
         <tr>
           <td>HULK</td>
           <td>10</td>
